Quorum3/Library/Tests/Expressions/Pass/HelloWorld.quorum
class HelloWorld 
    action Main
        output "Hello, World!"
    end
end