Quorum3/Library/Tests/Expressions/Fail/BadClassName.quorum
class Bob_Interface
    action Main
        output "Hi, from Bob_Interface"
    end
end